fixed issue with margin spacing around entire app when switching pages

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -217,5 +217,10 @@
         padding: 1rem;
         margin-top: 1rem;
         width: 5rem;
+        color: $component-background;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
