--- a/src/components/TasksList/TasksList.scss
+++ b/src/components/TasksList/TasksList.scss
@@ -9,7 +9,7 @@
     border: 1px solid $component-background;
     background-color: $component-background;
     padding: 2rem;
-    margin: 2rem 2rem 2rem 0;
+    margin-right: 1.5rem;
     min-height: 53rem;
     max-height: 53rem;
     overflow:scroll;
