--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -15,7 +15,7 @@
     max-width: 37rem;  //
     flex-grow: 1; //
     padding: 2rem;
-    margin: 2rem 2rem 2rem 0;
+    margin-right: 1.5rem;
     min-height: 53rem;
     max-height: 53rem;
 
