--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -6,7 +6,7 @@
     height: 53rem;
     border-radius: 1rem;
     padding: 1.5rem;
-    margin: 1.5rem 1.5rem 1.5rem 0;
+    margin-right: 1.5rem;
     display: flex;
 
     &__container {
