--- a/src/pages/TimerPage/TimerPage.scss
+++ b/src/pages/TimerPage/TimerPage.scss
@@ -1,4 +1,3 @@
 .timerPage {
     display: flex;
-    justify-content: space-between; // 
 }
